syntax = "proto3";

option go_package = "sigmaos/realmsrv/proto";

message MakeRequest {
  string realm = 1;
  string network = 2;
  uint32 providerInt = 3;
}

message MakeResult {
  repeated string namedAddr = 1;
}

message RemoveRequest {
  string realm = 1;
}

message RemoveResult {
}

